--- a/dialogs/main/MainWindow.ui
+++ b/dialogs/main/MainWindow.ui
@@ -109,7 +109,7 @@
      <string>Grand total</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton_viewAllExpenses">
+   <widget class="QPushButton" name="pushButton_allExpenses">
     <property name="geometry">
      <rect>
       <x>250</x>
@@ -194,7 +194,7 @@
      <string>Tasks for</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton_addNewJob">
+   <widget class="QPushButton" name="pushButton_allJobs">
     <property name="geometry">
      <rect>
       <x>520</x>
@@ -207,7 +207,7 @@
      <string>All jobs</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton">
+   <widget class="QPushButton" name="pushButton_allCustomers">
     <property name="geometry">
      <rect>
       <x>520</x>
@@ -223,8 +223,8 @@
    <widget class="QLabel" name="label_remindCustomers">
     <property name="geometry">
      <rect>
-      <x>550</x>
-      <y>300</y>
+      <x>540</x>
+      <y>310</y>
       <width>341</width>
       <height>41</height>
      </rect>
@@ -234,8 +234,8 @@
 &lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
 p, li { white-space: pre-wrap; }
 &lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'Ubuntu'; font-size:11pt; font-weight:400; font-style:normal;&quot;&gt;
-&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; text-decoration: underline; color:#da0000;&quot;&gt;There are jobs that have not been paid after 7 days!&lt;/span&gt;&lt;/p&gt;
-&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; text-decoration: underline; color:#da0000;&quot;&gt;Click here to send a reminder to the customers&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;a href=&quot;a&quot;&gt;&lt;span style=&quot; text-decoration: underline; color:#d10000;&quot;&gt;There are jobs that have not been paid after 7 days!&lt;/span&gt;&lt;/a&gt;&lt;/p&gt;
+&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;a href=&quot;a&quot;&gt;&lt;span style=&quot; text-decoration: underline; color:#d10000;&quot;&gt;Click here to send a reminder to the customers&lt;/span&gt;&lt;/a&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
     </property>
    </widget>
    <widget class="QDoubleSpinBox" name="doubleSpinBox_income">
