--- a/dialogs/main/MainWindow.ui
+++ b/dialogs/main/MainWindow.ui
@@ -114,12 +114,12 @@
      <rect>
       <x>250</x>
       <y>300</y>
-      <width>101</width>
+      <width>131</width>
       <height>21</height>
      </rect>
     </property>
     <property name="text">
-     <string>All expenses</string>
+     <string>Manage expenses</string>
     </property>
    </widget>
    <widget class="QListWidget" name="listWidget_jobs">
@@ -197,27 +197,27 @@
    <widget class="QPushButton" name="pushButton_allJobs">
     <property name="geometry">
      <rect>
-      <x>520</x>
+      <x>510</x>
       <y>220</y>
-      <width>121</width>
+      <width>141</width>
       <height>27</height>
      </rect>
     </property>
     <property name="text">
-     <string>All jobs</string>
+     <string>Manage jobs</string>
     </property>
    </widget>
    <widget class="QPushButton" name="pushButton_allCustomers">
     <property name="geometry">
      <rect>
-      <x>520</x>
+      <x>510</x>
       <y>250</y>
-      <width>121</width>
+      <width>141</width>
       <height>27</height>
      </rect>
     </property>
     <property name="text">
-     <string>All customers</string>
+     <string>Manage customers</string>
     </property>
    </widget>
    <widget class="QLabel" name="label_remindCustomers">
@@ -337,6 +337,19 @@ p, li { white-space: pre-wrap; }
     </property>
     <property name="value">
      <double>0.000000000000000</double>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="pushButton_allVatRates">
+    <property name="geometry">
+     <rect>
+      <x>250</x>
+      <y>260</y>
+      <width>131</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Manage VAT rates</string>
     </property>
    </widget>
   </widget>
