--- a/dialogs/vatrate/VatRateIndex.ui
+++ b/dialogs/vatrate/VatRateIndex.ui
@@ -25,6 +25,9 @@
    <attribute name="horizontalHeaderStretchLastSection">
     <bool>true</bool>
    </attribute>
+   <attribute name="verticalHeaderVisible">
+    <bool>false</bool>
+   </attribute>
    <column>
     <property name="text">
      <string>VAT rate</string>
