--- a/dialogs/main/MainWindow.ui
+++ b/dialogs/main/MainWindow.ui
@@ -352,6 +352,19 @@ p, li { white-space: pre-wrap; }
      <string>Manage VAT rates</string>
     </property>
    </widget>
+   <widget class="QPushButton" name="pushButton_generateReport">
+    <property name="geometry">
+     <rect>
+      <x>250</x>
+      <y>320</y>
+      <width>131</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Generate report</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menuBar">
    <property name="geometry">
