--- a/dialogs/expense/ExpenseForm.ui
+++ b/dialogs/expense/ExpenseForm.ui
@@ -95,7 +95,48 @@
      </widget>
     </item>
     <item row="5" column="1">
-     <widget class="QComboBox" name="comboBox_typeHeading"/>
+     <widget class="QComboBox" name="comboBox_typeHeading">
+      <item>
+       <property name="text">
+        <string>Stock/Materials</string>
+       </property>
+      </item>
+      <item>
+       <property name="text">
+        <string>Premises</string>
+       </property>
+      </item>
+      <item>
+       <property name="text">
+        <string>Repairs</string>
+       </property>
+      </item>
+      <item>
+       <property name="text">
+        <string>Admin</string>
+       </property>
+      </item>
+      <item>
+       <property name="text">
+        <string>Motor</string>
+       </property>
+      </item>
+      <item>
+       <property name="text">
+        <string>Advertising</string>
+       </property>
+      </item>
+      <item>
+       <property name="text">
+        <string>Debt</string>
+       </property>
+      </item>
+      <item>
+       <property name="text">
+        <string>Other</string>
+       </property>
+      </item>
+     </widget>
     </item>
     <item row="1" column="1">
      <widget class="QPlainTextEdit" name="plainTextEdit_description"/>
