Invoices and receipts are now saved in invoice/receipt folders, rather than being saved in the program directory

--- a/dialogs/job/JobShow.ui
+++ b/dialogs/job/JobShow.ui
@@ -213,9 +213,9 @@
      </widget>
     </item>
     <item>
-     <widget class="QPushButton" name="pushButton_sendReciept">
+     <widget class="QPushButton" name="pushButton_sendReceipt">
       <property name="text">
-       <string>Send reciept</string>
+       <string>Send receipt</string>
       </property>
      </widget>
     </item>
