Added date picker buttons to forms where appropriate

--- a/dialogs/task/TaskForm.ui
+++ b/dialogs/task/TaskForm.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>302</width>
+    <width>370</width>
     <height>269</height>
    </rect>
   </property>
@@ -89,6 +89,19 @@
    </property>
    <property name="text">
     <string>Cancel</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="pushButton_datePicker">
+   <property name="geometry">
+    <rect>
+     <x>270</x>
+     <y>70</y>
+     <width>97</width>
+     <height>27</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Date Picker</string>
    </property>
   </widget>
  </widget>
