--- a/dialogs/expense/ExpenseForm.ui
+++ b/dialogs/expense/ExpenseForm.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>400</width>
-    <height>390</height>
+    <height>353</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -16,8 +16,8 @@
   <widget class="QPushButton" name="pushButton_submit">
    <property name="geometry">
     <rect>
-     <x>80</x>
-     <y>320</y>
+     <x>40</x>
+     <y>310</y>
      <width>97</width>
      <height>27</height>
     </rect>
@@ -29,8 +29,8 @@
   <widget class="QPushButton" name="pushButton_cancel">
    <property name="geometry">
     <rect>
-     <x>210</x>
-     <y>320</y>
+     <x>170</x>
+     <y>310</y>
      <width>97</width>
      <height>27</height>
     </rect>
@@ -42,7 +42,7 @@
   <widget class="QWidget" name="formLayoutWidget">
    <property name="geometry">
     <rect>
-     <x>80</x>
+     <x>20</x>
      <y>50</y>
      <width>266</width>
      <height>245</height>
@@ -196,6 +196,19 @@
    </property>
    <property name="text">
     <string>Expense form title</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="pushButton_datePicker">
+   <property name="geometry">
+    <rect>
+     <x>290</x>
+     <y>50</y>
+     <width>97</width>
+     <height>27</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Date Picker</string>
    </property>
   </widget>
  </widget>
