--- a/dialogs/job/JobForm.ui
+++ b/dialogs/job/JobForm.ui
@@ -377,6 +377,19 @@
     <string>Description</string>
    </property>
   </widget>
+  <widget class="QPushButton" name="pushButton_datePicker">
+   <property name="geometry">
+    <rect>
+     <x>320</x>
+     <y>40</y>
+     <width>97</width>
+     <height>27</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Date Picker</string>
+   </property>
+  </widget>
  </widget>
  <resources/>
  <connections/>
