--- a/dialogs/vatrate/VatRateForm.ui
+++ b/dialogs/vatrate/VatRateForm.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>236</width>
+    <width>346</width>
     <height>159</height>
    </rect>
   </property>
@@ -18,15 +18,28 @@
     <rect>
      <x>20</x>
      <y>50</y>
-     <width>201</width>
-     <height>62</height>
+     <width>213</width>
+     <height>71</height>
     </rect>
    </property>
    <layout class="QFormLayout" name="formLayout">
+    <property name="fieldGrowthPolicy">
+     <enum>QFormLayout::AllNonFixedFieldsGrow</enum>
+    </property>
     <item row="0" column="0">
      <widget class="QLabel" name="label_vatRate">
       <property name="text">
        <string>Rate</string>
+      </property>
+     </widget>
+    </item>
+    <item row="0" column="1">
+     <widget class="QDoubleSpinBox" name="doubleSpinBox_vatRate">
+      <property name="suffix">
+       <string>%</string>
+      </property>
+      <property name="maximum">
+       <double>999999999.000000000000000</double>
       </property>
      </widget>
     </item>
@@ -39,16 +52,6 @@
     </item>
     <item row="1" column="1">
      <widget class="QDateEdit" name="dateEdit_startDate"/>
-    </item>
-    <item row="0" column="1">
-     <widget class="QDoubleSpinBox" name="doubleSpinBox_vatRate">
-      <property name="suffix">
-       <string>%</string>
-      </property>
-      <property name="maximum">
-       <double>999999999.000000000000000</double>
-      </property>
-     </widget>
     </item>
    </layout>
   </widget>
@@ -96,6 +99,19 @@
    </property>
    <property name="text">
     <string>Cancel</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="pushButton_datePicker">
+   <property name="geometry">
+    <rect>
+     <x>240</x>
+     <y>84</y>
+     <width>97</width>
+     <height>27</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Date Picker</string>
    </property>
   </widget>
  </widget>
