--- a/dialogs/job/JobForm.ui
+++ b/dialogs/job/JobForm.ui
@@ -175,7 +175,7 @@
    <property name="geometry">
     <rect>
      <x>70</x>
-     <y>490</y>
+     <y>480</y>
      <width>241</width>
      <height>31</height>
     </rect>
@@ -307,7 +307,7 @@
    <property name="geometry">
     <rect>
      <x>70</x>
-     <y>450</y>
+     <y>440</y>
      <width>351</width>
      <height>29</height>
     </rect>
@@ -377,7 +377,7 @@
     <string>Description</string>
    </property>
   </widget>
-  <widget class="QPushButton" name="pushButton_datePicker">
+  <widget class="QPushButton" name="pushButton_datePickerDate">
    <property name="geometry">
     <rect>
      <x>320</x>
@@ -389,6 +389,35 @@
    <property name="text">
     <string>Date Picker</string>
    </property>
+  </widget>
+  <widget class="QWidget" name="gridLayoutWidget">
+   <property name="geometry">
+    <rect>
+     <x>70</x>
+     <y>520</y>
+     <width>357</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <layout class="QGridLayout" name="gridLayout">
+    <item row="0" column="0">
+     <widget class="QLabel" name="label_paymentDate">
+      <property name="text">
+       <string>Payment Date</string>
+      </property>
+     </widget>
+    </item>
+    <item row="0" column="1">
+     <widget class="QDateTimeEdit" name="dateTimeEdit_paymentDate"/>
+    </item>
+    <item row="0" column="2">
+     <widget class="QPushButton" name="pushButton_datePickerPaymentDate">
+      <property name="text">
+       <string>Date Picker</string>
+      </property>
+     </widget>
+    </item>
+   </layout>
   </widget>
  </widget>
  <resources/>
