Added buttons to job show to view invoices and receipts

--- a/dialogs/job/JobShow.ui
+++ b/dialogs/job/JobShow.ui
@@ -162,32 +162,6 @@
     <string>Completion State</string>
    </property>
   </widget>
-  <widget class="QWidget" name="verticalWidget_sendInvoiceMarkAsPaid" native="true">
-   <property name="geometry">
-    <rect>
-     <x>360</x>
-     <y>430</y>
-     <width>121</width>
-     <height>80</height>
-    </rect>
-   </property>
-   <layout class="QVBoxLayout" name="verticalLayout">
-    <item>
-     <widget class="QPushButton" name="pushButton_sendInvoice">
-      <property name="text">
-       <string>Send invoice</string>
-      </property>
-     </widget>
-    </item>
-    <item>
-     <widget class="QPushButton" name="pushButton_markAsPaid">
-      <property name="text">
-       <string>Mark as paid</string>
-      </property>
-     </widget>
-    </item>
-   </layout>
-  </widget>
   <widget class="QLabel" name="label_job">
    <property name="geometry">
     <rect>
@@ -343,9 +317,9 @@
    <property name="geometry">
     <rect>
      <x>90</x>
-     <y>520</y>
-     <width>304</width>
-     <height>61</height>
+     <y>510</y>
+     <width>431</width>
+     <height>71</height>
     </rect>
    </property>
    <layout class="QGridLayout" name="gridLayout_paidBy">
@@ -381,6 +355,46 @@
      <widget class="QLabel" name="label_paymentDateE">
       <property name="text">
        <string>payment date</string>
+      </property>
+     </widget>
+    </item>
+    <item row="0" column="3">
+     <widget class="QPushButton" name="pushButton_viewReceipt">
+      <property name="text">
+       <string>View receipt</string>
+      </property>
+     </widget>
+    </item>
+   </layout>
+  </widget>
+  <widget class="QWidget" name="gridWidget_sendInvoiceMarkAsPaid" native="true">
+   <property name="geometry">
+    <rect>
+     <x>320</x>
+     <y>430</y>
+     <width>211</width>
+     <height>80</height>
+    </rect>
+   </property>
+   <layout class="QGridLayout" name="gridLayout_2">
+    <item row="0" column="0">
+     <widget class="QPushButton" name="pushButton_sendInvoice">
+      <property name="text">
+       <string>Send invoice</string>
+      </property>
+     </widget>
+    </item>
+    <item row="1" column="0">
+     <widget class="QPushButton" name="pushButton_markAsPaid">
+      <property name="text">
+       <string>Mark as paid</string>
+      </property>
+     </widget>
+    </item>
+    <item row="0" column="1">
+     <widget class="QPushButton" name="pushButton_viewInvoice">
+      <property name="text">
+       <string>View invoice</string>
       </property>
      </widget>
     </item>
